<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo_1516541196182_6bdb0516ed27"
    tools:context=".MainActivity">

    <!-- Layout - Filip, Rafat -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/calculator"
        android:textColor="@color/black"
        android:textSize="@dimen/header_calculator"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Input1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Result -->
    <EditText
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/result_z"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_area_of_the_circle" />

    <!-- Input -->
    <EditText
        android:id="@+id/Input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/first_input_x"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/second_input_y"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input1" />

    <!-- Buttons -->
    <Button
        android:id="@+id/button_square_root_of"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/square_root_of"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_subtraction" />

    <Button
        android:id="@+id/button_pythagorean_theorem"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pythagorean_theorem"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toStartOf="@+id/button_area_of_the_circle"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_multiplication" />

    <Button
        android:id="@+id/button_percent"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/percent"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/button_square_root_of"
        app:layout_constraintTop_toBottomOf="@+id/button_division" />

    <Button
        android:id="@+id/button_subtraction"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/subtraction"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input2" />


    <Button
        android:id="@+id/button_volume_of_the_cylinder"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/volume_of_the_cylinder"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/button_area_of_the_circle"
        app:layout_constraintTop_toBottomOf="@+id/button_percent" />

    <Button
        android:id="@+id/button_area_of_the_circle"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/area_of_the_circle"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_square_root_of" />

    <Button
        android:id="@+id/button_multiplication"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/multiplication"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toStartOf="@+id/button_square_root_of"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_addition" />

    <Button
        android:id="@+id/button_addition"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/addition"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toStartOf="@+id/button_subtraction"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input2" />


    <Button
        android:id="@+id/button_division"
        android:backgroundTint="@color/black"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/division"
        android:textSize="@dimen/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/button_subtraction"
        app:layout_constraintTop_toBottomOf="@+id/Input2" />

    <Button
        android:id="@+id/button_clear"
        android:backgroundTint="@color/red"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="@dimen/button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result" />

    <!-- description of buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/button_clear">

        <TextView
            android:id="@+id/count_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition_x_y_z"
             />

        <TextView
            android:id="@+id/count_subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/subtraction_x_y_z"
             />

        <TextView
            android:id="@+id/count_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/division_x_y_z"
            />

        <TextView
            android:id="@+id/count_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/multiplication_x_y_z"
            />

        <TextView
            android:id="@+id/count_square_root_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/square_root_of_x_z"
            />

        <TextView
            android:id="@+id/count_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/percent_what_percent_is_x_of_y_z"
            />

        <TextView
            android:id="@+id/count_pythagorean_theorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/pythagorean_x_base_y_height_z_hypotenuse"
            />

        <TextView
            android:id="@+id/count_area_of_the_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/area_of_the_circle_x_radius_z"
            />

        <TextView
            android:id="@+id/count_volume_of_the_cylinder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/volume_of_the_cylinder_x_radius_y_height_z"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>